meja/tests/list_weak_variable.stderr
File "tests/list_weak_variable.meja", line 5, characters 13-14:
Error: Incompatable types list(int) and list(bool):
       Cannot unify int and bool
